--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
   <title>Clear View Escapes</title>
-  <meta name="keywords" content="Travel planning, travel bundles, travel escapes, affordable travel 1127b">
+  <meta name="keywords" content="Travel planning, travel bundles, travel escapes, affordable travel 20180215">
   <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
 </head>
 
@@ -25,7 +25,11 @@
   </header>
 
   <div class="large-hero">
-    <img src="assets/images/hero--large.jpg">
+	
+	<picture>
+		<img src="assets/images/hero--large.jpg">
+	</picture>
+	
 	<div class="large-hero__text-content">
 		<h1 class="large-hero__title">Your clarity.</h1>
 		<h2 class="large-hero__subtitle">One trip away.</h2>
